exports[`RadioButton with listeners matches snapshot 1`] = `
<p>
  <input
    className="validate anotherClass"
    disabled={false}
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onClick={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    required={true}
    type="radio" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error="wrong"
    data-success="correct"
    htmlFor="test" />
</p>
`;

exports[`RadioButton with value matches snapshot 1`] = `
<p>
  <input
    checked={false}
    className=" with-gap"
    disabled={false}
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onClick={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    required={false}
    type="radio" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</p>
`;

exports[`RadioButton without listeners matches snapshot 1`] = `
<p>
  <input
    checked={true}
    className=""
    disabled={false}
    id="test"
    name="test_input"
    onChange={[Function bound _onChange]}
    onClick={[Function bound _onChange]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    required={true}
    type="radio" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</p>
`;
